deepen our glossary

--- a/website/src/pages/docs/basics/client/best-practices.mdx
+++ b/website/src/pages/docs/basics/client/best-practices.mdx
@@ -5,7 +5,7 @@ import { Explain } from "@/components/Explain"
 
 There are some best practices we strongly believe in while developing with `fuse`.
 
-## Don't interpolate arguments
+## Don't interpolate <Explain>arguments</Explain>
 
 When we are working with `field-arguments` it's important to either write them as a literal value i.e.
 
