Change Fuse.js to Fuse in docs

--- a/website/src/pages/docs/data-layers/index.mdx
+++ b/website/src/pages/docs/data-layers/index.mdx
@@ -1,6 +1,6 @@
 # Introduction to Data Layers
 
-We think Fuse.js is the best library for building data layers at scale. However, the data layer pattern is a general architectural pattern that many successful companies have implemented themselves.
+We think Fuse is the best library for building data layers at scale. However, the data layer pattern is a general architectural pattern that many successful companies have implemented themselves.
 
 ## What is a data layer?
 
