--- a/website/src/pages/docs/basics/client/server-components.mdx
+++ b/website/src/pages/docs/basics/client/server-components.mdx
@@ -1,6 +1,6 @@
 # Server Components
 
-When using React server components, Fuse.js skips the intermediate step of reaching out to an
+When using React server components, Fuse skips the intermediate step of reaching out to an
 API endpoint and instead executes the GraphQL directly in the server component renderer:
 
 ```tsx
