--- a/website/src/pages/docs/setting-fuse-up-manually.mdx
+++ b/website/src/pages/docs/setting-fuse-up-manually.mdx
@@ -45,7 +45,7 @@ export const POST = handler
   If you are using Next.js's Pages Router, replace <code>createAPIRouteHandler</code> with <code>createPagesRouteHandler</code> instead.
 </Callout>
 
-That’s it! Fuse.js will now serve a GraphQL API at `/api/fuse`.
+That’s it! Fuse will now serve a GraphQL API at `/api/fuse`.
 
 </Steps>
 
@@ -62,7 +62,7 @@ type UserSource = {
   avatar_url: string
 }
 
-// "Nodes" are the core abstraction of Fuse.js. Each node represents
+// "Nodes" are the core abstraction of Fuse. Each node represents
 // a resource/entity with multiple fields and has to define two things:
 // 1. load(): How to fetch from the underlying data source
 // 2. fields: What fields should be exposed and added for clients
@@ -91,7 +91,7 @@ async function getUsers(ids: string[]): Promise<UserSource[]> {
 }
 ```
 
-Note how the only code you had to write was the translation from the underlying data source to the shape of the data that you need. Fuse.js takes care of everything else for you.
+Note how the only code you had to write was the translation from the underlying data source to the shape of the data that you need. Fuse takes care of everything else for you.
 
 ## Set up GraphQLSP to get IDE autocomplete
 
