--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -14,16 +14,13 @@ Before you start using Fuse, you need to have:
 
 - Familiarity with TypeScript
 - Basic familiarity with writing GraphQL queries*
-- A Next.js app**
 
 \**Note that we are working on improving the documentation so that Fuse doesn't even require basic familiarity with writing GraphQL queries.*
-
-\*\**Note that a Fuse data layer can also be developed and deployed outside of Next.js. However, our current focus is on making the experience with Next.js great, so expect rough edges elsewhere.*
 
 <Steps>
 ### Set up your data layer
 
-In the root folder of your existing Next.js application run `create-fuse-app` with npx, pnpm, or yarn:
+In the root folder of your application run `create-fuse-app` with npx, pnpm, or yarn:
 
 <Tabs items={['npm','pnpm',  'yarn', 'bun']}>
   <Tabs.Tab>
@@ -52,22 +49,25 @@ bun create fuse-app
   </Tabs.Tab>
 </Tabs>
 
-This will automatically set up Fuse for you, which consists of [five main steps](/docs/setting-fuse-up-manually):
+This will automatically set up Fuse for you, which consists of [three main steps](/docs/setting-fuse-up-manually):
 
 1. Install the npm packages
-2. Add the Next.js plugin to your `next.config.js`
-3. Create the `/api/fuse` API route
-4. Set up GraphQLSP to get IDE autocomplete
-5. Adds a first example type in `types/User.ts`
+1. Set up GraphQLSP to get IDE autocomplete
+1. Adds a first example type in `types/User.ts`
+
+> If create-fuse-app detects that you are **using Next.js**, it will [also automatically](/docs/frameworks/nextjs):
+>
+> 1. Add the Next.js plugin to your `next.config.js`
+> 1. Create a `/api/fuse` API route
 
 It generates the example `User.ts` type to allow you to verify your Fuse setup (see the next step) and serves as an example how to use Fuse to build a data layer. However, please **delete the `types/User.ts` file once you start building your own data layer**.
 
 ### Verify your Fuse setup is working
 
-Now, if you run `next dev` and open `localhost:3000/api/fuse` in the browser, you'll see GraphiQL and be able to query for a user:
+Now, if you run `fuse dev` and open `localhost:4000/graphql` in your browser, you'll see GraphiQL and be able to query for a user:
 
-![Screenshot of GraphiQL running at localhost:3000/api/fuse showing a query for a user, their id, name, and firstName, and the corresponding result](https://gist.github.com/assets/7525670/6c0d9a7a-901e-4e65-aaad-8f66081afbef)
+![Screenshot of GraphiQL showing a query for a user, their id, name, and firstName, and the corresponding result](https://gist.github.com/assets/7525670/6c0d9a7a-901e-4e65-aaad-8f66081afbef)
 
 </Steps>
 
-You've now got a Fuse data layer setup with your Next.js app! 🎉 Next, learn how to [query your Fuse data layer from the client](/docs/basics/client).
+You've now got a Fuse data layer setup! 🎉 Next, learn how to [query your Fuse data layer from the client](/docs/basics/client).
