--- a/website/src/pages/docs/deployment/index.mdx
+++ b/website/src/pages/docs/deployment/index.mdx
@@ -5,5 +5,6 @@ TODO
 Your Fuse API can be built for the below runtimes and deployed to any platform that supports them:
 
 - [Node](/docs/deployment/node)
+- [Next.js API Route](/docs/deployment/nextjs)
 - [Lambda](/docs/deployment/lambda)
 - [Cloudflare Workers](/docs/deployment/cloudflare-workers)
