Reorder a bit more

--- a/website/src/pages/docs/client/index.mdx
+++ b/website/src/pages/docs/client/index.mdx
@@ -13,7 +13,7 @@ We also keep a [list of recommended best practices for client data fetching](/do
 
 ## Generated client files
 
-When you run `fuse dev` (or `next dev` if using [the Next.js plugin](/docs/frameworks/nextjs)) you'll see the `fuse/` folder populate
+When you run `fuse dev` (or `next dev` if using [the Next.js plugin](/docs/setting-fuse-up-manually/nextjs)) you'll see the `fuse/` folder populate
 with a bunch of files. These don't need to be touched and are mostly there to
 help with typing your results, variables and facilitating the client-methods.
 
