--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -55,7 +55,7 @@ This will automatically set up Fuse for you, which consists of [three main steps
 1. Set up GraphQLSP to get IDE autocomplete
 1. Adds a first example type in `types/User.ts`
 
-> If create-fuse-app detects that you are **using Next.js**, it will [also automatically](/docs/frameworks/nextjs):
+> If create-fuse-app detects that you are **using Next.js**, it will [also automatically](/docs/setting-fuse-up-manually/nextjs):
 >
 > 1. Add the Next.js plugin to your `next.config.js`
 > 1. Create a `/api/fuse` API route
