--- a/website/src/pages/docs/server/context.mdx
+++ b/website/src/pages/docs/server/context.mdx
@@ -8,7 +8,7 @@ This is done through the `context` object which will be carried around throughou
 
 ## Defining context
 
-> **NOTE**: If you're using Next.js, please refer to the Next.js documentation on how to define context.
+> **NOTE**: If you're **using Next.js**, please [see below](#nextjs) on how to define context.
 
 If we need context we need to add an `_context.ts` file at the root and export a `getContext` function:
 
@@ -34,6 +34,70 @@ export const getContext = (
 Now our `ctx` attribute in our resolvers will be statically typed and this function
 will execute on every invocation.
 
+### Next.js
+
+[Context](/docs/basics/context) has to be defined a bit differently in Next.js than otherwise. Using it in your API, however, stays the same.
+
+#### API-Route
+
+By default we will expose `params` and `headers` on the context object. If you want to expose more data you can do so by
+adding it to the function invocation of your API handler.
+
+```ts
+import { createAPIRouteHandler } from 'fuse/next'
+
+createAPIRouteHandler<{ userAgent: string }>({
+  context: (ctx) => {
+    return {
+      userAgent: ctx.headers.get('user-agent') || 'unknown',
+    }
+  }
+})
+```
+
+Now the `userAgent` will be available to all of our GraphQL resolvers!
+
+#### Server components
+
+In `server-components` we don't have the `headers` available by default when using the `execute` function, this
+to avoid automatically opting people into [dynamic functions](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-functions).
+We'll have to pass these in with the second argument of our `execute` function.
+
+```ts
+import { headers } from 'next/headers'
+import { createAPIRouteHandler } from '@/fuse/server'
+
+execute({
+  query: x,
+  variables: {},
+  context: () => {
+    return {
+      userAgent: headers().get('user-agent') || 'unknown'
+    }
+  } 
+})
+```
+
+> This means that if you use `context.headers` or a related property in your resolvers that you will need to define this yourself
+> if your executed <Explain term='documents'>document</Explain> would tap into those resolvers.
+
+#### Static typing
+
+You can ensure that your `Context` is typed in both your server
+as well as your client code by overriding the global type in `fuse`:
+
+```ts
+// Important so the surrounding types won't override
+import 'fuse'
+
+declare module 'fuse' {
+  // This basically means that the `context` needs to define
+  // a userId
+  export interface UserContext {
+    userId: string | null
+  }
+}
+```
 
 ## Using `context` in your API
 
