More cleanup of client section

--- a/website/src/pages/docs/client/best-practices.mdx
+++ b/website/src/pages/docs/client/best-practices.mdx
@@ -6,7 +6,7 @@ import { Explain } from "@/components/Explain"
 There are some best practices we strongly believe in while developing with `fuse`.
 
 
-## <Explain>Fragment</Explain> co-location
+## Use <Explain>fragment</Explain> co-location
 
 One of the pillars of `fuse` is Fragment <Explain term='colocation'>co-location</Explain>, we strongly believe that this patterns helps
 us get a better overview of our data-requirements and makes it easier to reason about the data
