--- a/website/src/pages/docs/deployment/node.mdx
+++ b/website/src/pages/docs/deployment/node.mdx
@@ -1,5 +1,9 @@
-# Node
+# Deploying your Fuse API with Node
 
-TODO
+First, build your API server into a single JS file that can be run with Node:
 
-Run `fuse build --adapter node`
+```sh
+fuse build --adapter node
+```
+
+This will build your server into `build/node.js`. You can deploy it to your favorite Cloud and run it with node (`node build/node.js`).
