--- a/website/src/pages/docs/deployment/lambda.mdx
+++ b/website/src/pages/docs/deployment/lambda.mdx
@@ -1,5 +1,9 @@
-# Lambda
+# Deploying your Fuse API with Lambda
 
-TODO
+First, build your API server into a single JS file that can be run on a Lambda:
 
-Run `fuse build --adapter lambda`
+```sh
+fuse build --adapter lambda
+```
+
+This will build your server into `build/lambda.js`, which you can deploy to your favorite lambda host.
