--- a/website/src/pages/docs/client/index.mdx
+++ b/website/src/pages/docs/client/index.mdx
@@ -7,13 +7,13 @@ Fuse has first-class support for certain frameworks (working on adding more!). F
 
 - [React & React Native (first-class)](/docs/client/react)
 - [Next.js (first-class)](/docs/client/nextjs)
+- [Vue (first-class)](/docs/client/vue)
+- [Angular (first-class)](/docs/client/angular)
 
 Fuse creates a GraphQL API at its core, which means **your API is compatible with any GraphQL client in any language**:
 
 - [iOS (Swift)](/docs/client/ios)
 - [Android (Java/Kotlin)](/docs/client/android)
-- [Vue](/docs/client/vue)
-- [Angular](/docs/client/angular)
 
 We also keep a [list of recommended best practices for client data fetching](/docs/client/best-practices), specifically we strongly encourage the use of fragment co-location.
 
