--- a/website/src/pages/docs/client/vue.mdx
+++ b/website/src/pages/docs/client/vue.mdx
@@ -1,5 +1,4 @@
 # Vue
 
-Fuse does not have built-in code generation support for Vue yet. However, you can access the GraphQL API you create with Fuse with **any GraphQL client that works on Vue!**
 
-For example, [Apollo Vue](https://apollo.vuejs.org/) is a popular option.
+TODO
