--- a/website/src/pages/docs/client/index.mdx
+++ b/website/src/pages/docs/client/index.mdx
@@ -10,10 +10,11 @@ Fuse has first-class support for certain frameworks (working on adding more!). F
 - [Vue (first-class)](/docs/client/vue)
 - [Angular (first-class)](/docs/client/angular)
 
-Fuse creates a GraphQL API at its core, which means **your API is compatible with any GraphQL client in any language**:
+Fuse creates a GraphQL API at its core, which means **your API is compatible with any GraphQL client in any language** or even just send HTTP requests for languages that don't have GraphQL clients:
 
 - [iOS (Swift)](/docs/client/ios)
 - [Android (Java/Kotlin)](/docs/client/android)
+- [HTTP](/docs/client/http)
 
 We also keep a [list of recommended best practices for client data fetching](/docs/client/best-practices), specifically we strongly encourage the use of fragment co-location.
 
